[project]
name = "short-bond-hunter"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.1",
    "async-lru>=2.0.5",
    "fastapi[standard]>=0.120.2",
    "pydantic-settings>=2.11.0",
    "requests>=2.32.5",
    "tinkoff-investments>=0.2.0b117",
]
