[project]
name = "short-bond-hunter"
version = "0.1.0"
description = "Auto-bond hunter for MOEX via T-Bank - buys short-term bonds with high yield, low risk, and real-time Telegram notifications."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.1",
    "async-lru>=2.0.5",
    "pydantic-settings>=2.11.0",
    "requests>=2.32.5",
    "tinkoff-investments>=0.2.0b117",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
]
