[project]
name = "short-bond-hunter"
version = "0.1.0"
description = "Auto-bond hunter for MOEX via T-Bank - buys short-term bonds with high yield, low risk, and real-time Telegram notifications."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.1",
    "pydantic-settings>=2.11.0",
    "requests>=2.32.5",
    "t-tech-investments>=0.3.3",
]

[[tool.uv.index]]
url = "https://opensource.tbank.ru/api/v4/projects/238/packages/pypi/simple"
default = true
